<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.in.den.newsunshine.DetailActivity"
    tools:showIn="@layout/activity_detail"
    >

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="PARIS"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="04 nov. 2016"
            android:textColor="@color/sunshine_verydark_blue"
            android:textAppearance="?android:textAppearanceMedium" />

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="cloudy"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/temperature"
        android:textColor="@color/sunshine_verydark_blue"
        android:textAppearance="?android:textAppearanceLarge"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
           android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/morning" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/day" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/evening" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="@string/night" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
             android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_tempmorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="08" />
            <TextView
                android:id="@+id/detail_tempday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="12" />
            <TextView
                android:id="@+id/detail_tempeve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="10" />
            <TextView
                android:id="@+id/detail_tempnight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="05" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="MIN" />
            <TextView
                android:id="@+id/detail_tempmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="12" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="MAX" />
            <TextView
                android:id="@+id/detail_tempmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:text="05" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/humidity"
        android:textColor="@color/sunshine_verydark_blue"
        android:textAppearance="?android:textAppearanceLarge"
         />
    <TextView
        android:id="@+id/detail_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="23.56"
        android:textSize="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/pression"
        android:textColor="@color/sunshine_verydark_blue"
        android:textAppearance="?android:textAppearanceLarge" />
    <TextView
        android:id="@+id/detail_pression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="23.56"
        android:textSize="25dp" />
</LinearLayout>
